--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,1 @@
-/*  your css code here. If applicable */
+/*  your css code here. If applicable */https://storage.googleapis.com/acciojob-open-file-collections/welcome.png
